Changes to list Wunderwidget 2

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Old Package</div>
+	  <div class="panel-heading">Wunderwidget</div>
 	  <div class="panel-body">
-		This is a sample package with minimal information. 
-		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
+		Wunderlist widget for your lockscreen<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.jasimmohd.wunderwidget">More info</a>
 	  </div>
 	</div>
-	
+	<!--
 	<div class="panel panel-default">
 	  <div class="panel-heading">New Package</div>
 	  <div class="panel-body">
@@ -41,7 +40,8 @@
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
 	  </div>
 	</div>
-</div>
 
+</div>
+	-->
 </body>
 </html>
